Fix - post/private: Password protected button is not aligned (ED-2533)
Now when the form for entering private post/page is showing the button aligned correctly with the text input for password.

--- a/assets/scss/theme/_general.scss
+++ b/assets/scss/theme/_general.scss
@@ -84,3 +84,9 @@ to override any of the settings in this section, add your styling code in the cu
 .bypostauthor {
 	font-size: inherit;
 }
+
+.post-password-form {
+	input[type='submit'] {
+		vertical-align: bottom;
+	}
+}
