--- a/theme.css
+++ b/theme.css
@@ -94,6 +94,9 @@ to override any of the settings in this section, add your styling code in the cu
 .bypostauthor {
   font-size: inherit; }
 
+.post-password-form input[type='submit'] {
+  vertical-align: bottom; }
+
 /*
 DO NOT CHANGE THIS FILE
 to override any of the settings in this section, add your styling code in the custom directory.
